# libsvg-cairo

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.in  libsvg-cairo.pc.in  libsvg-cairo.sln  win32_config.h
libsvg-cairo/: libsvg-cairo.vcxproj  libsvg-cairo.vcxproj.filters
src/: .cvsignore  Makefile.am  svg-cairo-internal.h  svg-cairo.h  svg_cairo.c  svg_cairo_sprintf_alloc.c  svg_cairo_state.c
